Update jenkins.sh